<?xml version="1.0"?>
<package>
  <name>asv_control</name>
  <version>0.0.1</version>
  <description>The asv_control package.  Contains a node for thruster allocation, a node for managing PID controllers for holding a particular pose, and a node for managing PID controllers for holding a particular twist.</description>
  <author email="fletcher.thompson@utas.edu.au">Fletcher Thompson</author>
  <maintainer email="fletcher.thompson@utas.edu.au">Fletcher Thompson</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>asv_control_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>asv_control_msgs</run_depend>
  <export></export>
</package>
