<?xml version="1.0"?>
<package>
  <name>asv_rc</name>
  <version>0.0.0</version>
  <description>Package for teleoperation of the ASV</description>

  <maintainer email="fletcher.thompson@utas.edu.au">Fletcher Thompson</maintainer>
  <author email="fletcher.thompson@utas.edu.au">Fletcher Thompson</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export></export>
</package>
